Gallery style, why featured does not work?

--- a/style.css
+++ b/style.css
@@ -60,3 +60,21 @@ body {
 .footer a:visited {
 	color:white;
 }
+
+
+div.gallery {
+	margin: 5px;
+	background-color: #444;
+	float: left;
+}
+div.gallery:hover {
+    border: 1px solid #777;
+}
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
