--- a/style.css
+++ b/style.css
@@ -65,21 +65,21 @@ body {
 
 
 div.gallery {
-	margin: 5px;
+	padding: 0 6px;
 	background-color: #4CAF50;
 	float: left;
-	border: 1px solid #ccc;
-	width: 31,5%
+	width: 24.5%;
+	border: 2px solid #444;
 }
 @media only screen and (max-width: 700px) {
 	div.gallery {
-		width: 48%;
+		width: 49%;
 		padding: 0 6px;
 	}
 }
 @media only screen and (max-width: 400px) {
 	div.gallery {
-		width: 90%;
+		width: 98%;
 	}
 }
 
@@ -93,4 +93,7 @@ div.gallery img {
 div.desc {
     padding: 15px;
     text-align: center;
+}
+* {
+    box-sizing: border-box;
 }
